Calculate splitter sizes when child is removed

Has as sizeable comment because the cause and fix are non-obvious and
the fix is based on the underdocumented QSplitter::refresh().

BUG: 472641